--- a/css/_responsive.scss
+++ b/css/_responsive.scss
@@ -104,7 +104,7 @@
         }
     }
     .main_breadcrumb .container {
-        padding-left: 15px;
+        // padding-left: 15px;
     }
     .text-img-wrap.no-img .btn_sm {
         position: static;
@@ -117,8 +117,8 @@
         margin: 0px;
     }
     .main_wrapper .main_breadcrumb .breadcrumb {
-        padding-left: 20px;
-        padding-right: 20px;
+        // padding-left: 20px;
+        // padding-right: 20px;
     }
 }
 
