--- a/css/_footer_main.scss
+++ b/css/_footer_main.scss
@@ -1,9 +1,8 @@
 //footer
 .footer {
-    background: #1E1E1E;
+    background: linear-gradient(0deg, rgba(21, 54, 131, 0.97) 0%, rgba(21, 54, 131, 0.97) 100%), url(../img/footer_img.jpg) lightgray 0px -413.019px / 100% 215.757% no-repeat;
     color: #fff;
-    padding: 40px 0 40px 0;
-    font-family: 'DM Sans', Arial, sans-serif;
+    padding: 40px 0 24px 0;
     .footer_row {
         display: grid;
         grid-template-columns: 0.8fr 1fr 1fr;
@@ -28,8 +27,9 @@
         }
     }
     .footer-logo {
-        margin-bottom: 40px;
-        img {}
+        margin-bottom: 24px;
+        img {
+        }
     }
     .footer-social {
         display: flex;
@@ -51,34 +51,33 @@
                 transition: background 0.2s;
                 img {
                     max-width: 25px;
+                    filter: brightness(0) saturate(100%) invert(19%) sepia(55%) saturate(2126%) hue-rotate(198deg) brightness(92%) contrast(94%);
                 }
                 &:hover {
-                    background: #FF7D00;
+                    background: $green;
                 }
             }
         }
     }
     h2 {
-        font-size: 21px;
+        font-size: 24px;
         font-weight: 700;
-        color: #D8790D;
-        border-bottom: 1px solid #D8790D;
-        padding-bottom: 6px;
-        margin-bottom: 15px;
+        color: #fff;
+        margin-bottom: 16px;
     }
     .footer-contact {
         margin-bottom: 16px;
         display: grid;
         grid-template-columns: 33px auto;
         p {
-            font-size: 18px;
+            font-size: 16px;
             margin-bottom: 0;
             color: #fff;
+            font-weight: 500;
             a {
-                color: #fff;
-                font-weight: normal;
+                color: $white;
                 &:hover {
-                    color: $secondary;
+                    color: $light-green;
                 }
             }
         }
@@ -98,7 +97,7 @@
             line-height: 1.3;
         }
         .font-weight-bold {
-            font-family: 'Inter', Arial, sans-serif;
+            font-family: "Inter", Arial, sans-serif;
             font-weight: 700;
         }
         strong {
@@ -106,15 +105,31 @@
         }
     }
     .footer-links {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        column-gap: 24px;
+        @include md{
+            grid-template-columns: 1fr; 
+        }
         li {
-            margin-bottom: 15px;
+            margin-bottom: 10px;
+            padding-left: 15px;
+            position: relative;
             a {
                 color: #fff;
-                font-size: 18px;
-                text-decoration: underline;
-                font-weight: normal;
+                font-size: 16px;
+                // text-decoration: underline;
+                font-weight: 500;
+                &::before {
+                    content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="8" height="12" viewBox="0 0 8 12" fill="none"><path d="M1.0625 12L0 10.9375L4.9375 6L0 1.0625L1.0625 0L7.0625 6L1.0625 12Z" fill="white"/></svg>');
+                    position: absolute;
+                    left: 0px;
+                    // top: 50%;
+                    // transform: translateY(-50%);
+                }
                 &:hover {
-                    color: $secondary;
+                    color: $light-green;
+                    text-decoration: underline;
                 }
             }
         }
@@ -127,10 +142,16 @@
         margin: 24px 0 20px 0;
     }
     small {
-        font-size: 14px;
+        font-size: 13px;
         line-height: 1.3;
-        color: #fff;
         opacity: 1;
+        margin-top: 32px;
+        display: block;
+        font-weight: 300;
+        font-style: italic;
+        img{
+            margin-left: 10px;
+        }
     }
     @media (max-width: 767.98px) {
         .footer-social {
